<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="73dp">

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:maxLines="3"
        android:layout_margin="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:id="@+id/clearButton"
        style="@style/numberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleClearButtonClick"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zeroButton"
        app:layout_constraintTop_toBottomOf="@+id/nineButton" />

    <Button
        android:id="@+id/sevenButton"
        style="@style/numberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleNumericButtonClick"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/dotButton"
        app:layout_constraintEnd_toStartOf="@+id/eightButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourButton" />

    <Button
        android:id="@+id/eightButton"
        style="@style/numberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleNumericButtonClick"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/zeroButton"
        app:layout_constraintEnd_toStartOf="@+id/nineButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sevenButton"
        app:layout_constraintTop_toBottomOf="@+id/fiveButton" />

    <Button
        android:id="@+id/nineButton"
        style="@style/numberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleNumericButtonClick"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eightButton"
        app:layout_constraintTop_toBottomOf="@+id/sixButton" />

    <Button
        android:id="@+id/plusButton"
        style="@style/operationButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleArithmeticButtonClick"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/minusButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/fourButton"
        style="@style/numberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleNumericButtonClick"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/sevenButton"
        app:layout_constraintEnd_toStartOf="@+id/fiveButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oneButton" />

    <Button
        android:id="@+id/fiveButton"
        style="@style/numberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="handleNumericButtonClick"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/eightButton"
        app:layout_constraintEnd_toStartOf="@+id/sixButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fourButton"
        app:layout_constraintTop_toBottomOf="@+id/twoButton" />

    <Button
        android:id="@+id/sixButton"
        style="@style/numberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleNumericButtonClick"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/nineButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fiveButton"
        app:layout_constraintTop_toBottomOf="@+id/threeButton" />

    <Button
        android:id="@+id/minusButton"
        style="@style/operationButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleArithmeticButtonClick"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/multiplyButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plusButton"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/oneButton"
        style="@style/numberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleNumericButtonClick"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/fourButton"
        app:layout_constraintEnd_toStartOf="@+id/twoButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2" />

    <Button
        android:id="@+id/twoButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleNumericButtonClick"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/fiveButton"
        app:layout_constraintEnd_toStartOf="@+id/threeButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/oneButton"
        app:layout_constraintTop_toBottomOf="@+id/guideline2"
        style="@style/numberButton" />

    <Button
        android:id="@+id/threeButton"
        style="@style/numberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleNumericButtonClick"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/sixButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/twoButton"
        app:layout_constraintTop_toBottomOf="@+id/guideline2" />

    <Button
        android:id="@+id/multiplyButton"
        style="@style/operationButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleArithmeticButtonClick"
        android:text="@string/multiply"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/divideButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minusButton"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/dotButton"
        style="@style/numberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleNumericButtonClick"
        android:text="@string/dot"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zeroButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sevenButton" />

    <Button
        android:id="@+id/zeroButton"
        style="@style/numberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleNumericButtonClick"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clearButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dotButton"
        app:layout_constraintTop_toBottomOf="@+id/eightButton" />

    <Button
        android:id="@+id/equalButton"
        style="@style/operationButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleEqualsButtonClick"
        android:text="@string/equal"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/divideButton"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/divideButton"
        style="@style/operationButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="handleArithmeticButtonClick"
        android:text="@string/devide"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/equalButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/multiplyButton"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>